@@ -6,13 +6,13 @@
 /*   By: mlinhard <mlinhard@student.42.fr>          +#+  +:+       +#+        */
 /*                                                +#+#+#+#+#+   +#+           */
 /*   Created: 2016/01/04 22:55:30 by mlinhard          #+#    #+#             */
-/*   Updated: 2016/01/04 23:25:50 by mlinhard         ###   ########.fr       */
+/*   Updated: 2016/01/05 00:08:06 by mlinhard         ###   ########.fr       */
 /*                                                                            */
 /* ************************************************************************** */
 
 #include "fillit.h"
 
-int					*ok_build(char **tab)
+int		*ok_build(char **tab)
 {
 	int		*ok;
 	int		i;
@@ -28,9 +28,34 @@ int					*ok_build(char **tab)
 	return (ok);
 }
 
-int					*ok_remove(int *ok, int remove)
+int		*ok_remove(int *ok, int piece)
 {
+	int		i;
+	int		j;
+	int		*ok_new;
+
+	i = 0;
+	while (ok[i] != -1)
+		i++;
+	ok_new = (int *)malloc(sizeof(int) * i);
+	ok_new[i] = -1;
+	i = 0;
+	j = 0;
+	while (ok[j] > -1)
+	{
+		if (ok[i] != piece)
+		{
+			ok_new[j] = ok[i];
+			j++;
+		}
+		i++;
+	}
+
+	return (ok_new);
+}
+
+void	ok_free(int *ok)
+{
+	// A FAIRE PLUS TARD
 	ok++;
-	remove++;
-	return (ok);
 }
